--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@ a:hover {
 
 <ul>
 <li>
-<a href="./hamlet.html">Colored version</a>
+<a href="./VR-1/hamlet.html">Colored version</a>
 </li>
 <li>
-<a href="./hamlet.bnw.html">Black and white version</a>
+<a href="./VR-1/hamlet.bnw.html">Black and white version</a>
 </li>
 
 </ul>
