--- a/VR-1/hamlet.html
+++ b/VR-1/hamlet.html
@@ -1,11 +1,11 @@
 <head>
-  <link href="http://vjs.zencdn.net/5.16.0/video-js.css" rel="stylesheet">
+  <link href="video-js.css" rel="stylesheet">
 
   <!-- If you'd like to support IE8 -->
-  <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+  <script src="videojs-ie8.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-  <script src="http://vjs.zencdn.net/5.16.0/video.js"></script>
+  <script src="video.js"></script>
 
   <script src="path.js"></script>
   
