--- a/VR-1/hamlet.html
+++ b/VR-1/hamlet.html
@@ -207,7 +207,7 @@ html, body{
   
     <video id="tanya" class="video-js vjs-big-play-centered fullscreen-bg__video myvideo selected" controls preload="auto" width="854" height="480"
      data-setup='{}' >
-      <source src="https://www.dropbox.com/s/rs6fbdyklzujoen/SINGLE-TANYA_1.mp4?dl=1" type='video/mp4'>
+      <source src="https://dl.dropboxusercontent.com/u/34826254/SINGLE-TANYA_1.mp4" type='video/mp4'>
       <!-- <source src="https://www.dropbox.com/s/bckd8jwgz1fioll/sSINGLE-TANYA_1_1.mp4?dl=1" type='video/mp4'> -->
 
       
