Add path seg polyfill

--- a/VR-1/hamlet.bnw.html
+++ b/VR-1/hamlet.bnw.html
@@ -263,6 +263,10 @@ html, body{
 
 
   <script src="lines.js"></script>
+  <script src="pathseg.js"></script>
+
+  
+  
   <script>
 
 function setMeSelected(h){
