--- a/VR-1/hamlet.html
+++ b/VR-1/hamlet.html
@@ -247,6 +247,7 @@ html, body{
 
 
   <script src="lines.js"></script>
+  <script src="pathseg.js"></script>
   <script>
 
 function setMeSelected(h){
